# soundclouder

./: LICENSE  README.md  pyproject.toml
soundclouder/: __init__.py  sc_cli.py  sc_easyid3_extension.py  sc_metadata.py  sc_requests.py  sc_types.py  soundclouder.py
