[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["soundclouder"]

[project]
name = "soundclouder"
version = "0.0.3"
authors = [
    {name = "Volodymyr (l1asis)"},
]
description = "Python library for downloading SoundCloud songs"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["soundcloud", "soundcloud-api", "playlists", "metadata", "mp3", "opus", "id3", "tags"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "mutagen",
    'importlib-metadata; python_version>="3.10"'
]

[project.urls]
repository = "https://github.com/l1asis/soundclouder"

[project.scripts]
soundclouder = "soundclouder.sc_cli:cli"