[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["soundclouder"]

[project]
name = "soundclouder"
version = "0.0.5"
authors = [
    {name = "Volodymyr (l1asis)"},
]
description = "Python library for downloading SoundCloud songs"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["soundcloud", "python", "soundcloud-api", "tracks", "playlists", "albums", 
            "metadata", "mp3", "opus", "id3", "tags", "music", "library", "tool"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "mutagen"
]

[project.urls]
repository = "https://github.com/l1asis/soundclouder"

[project.scripts]
soundclouder = "soundclouder.sc_cli:cli"